@@ -1,3 +1,4 @@
 Fixed clan members getting disconnected if they were removed from a raid
 Fixed console spam if trying to use tab completions for /clan kick
 Fixed the spacing of the raid completion message
+Fixed the display of the amount of shield a clan has remaining
